# simple-oracle

./: .gitignore  Cargo.toml  README.md
.ci/: contracts.sh
.github/workflows/: test.yml
src/: config.rs  lib.rs  lifecycle.rs  msg.rs  storage.rs
tests/: integration_test.rs
tests/common/: mod.rs
